[gd_scene load_steps=15 format=3]

[ext_resource type="Script" path="res://scripts/park_level_controller.gd" id="1"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_top_color = Color(0.384, 0.627, 0.878, 1)
sky_horizon_color = Color(0.646, 0.756, 0.867, 1)
ground_horizon_color = Color(0.646, 0.756, 0.867, 1)
sun_angle_max = 15.0
sun_curve = 0.15

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 3
ambient_light_color = Color(0.8, 0.85, 0.9, 1)
ambient_light_energy = 0.6
fog_enabled = true
fog_light_color = Color(0.8, 0.85, 0.9, 1)
fog_density = 0.001

[sub_resource type="BoxMesh" id="BoxMesh_ground"]
size = Vector3(128, 0.2, 128)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_grass"]
albedo_color = Color(0.2, 0.5, 0.2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_ground"]
size = Vector3(128, 0.2, 128)

[sub_resource type="PlaneMesh" id="PlaneMesh_water"]
size = Vector2(40, 40)

[sub_resource type="Shader" id="Shader_water"]
code = "
shader_type spatial;
render_mode blend_mix,depth_draw_opaque,cull_back,diffuse_burley,specular_schlick_ggx;

uniform vec4 shallow_color : source_color = vec4(0.3, 0.5, 0.7, 0.8);
uniform vec4 deep_color : source_color = vec4(0.1, 0.2, 0.4, 0.95);
uniform float wave_speed : hint_range(0.0, 2.0) = 0.5;
uniform float wave_amplitude : hint_range(0.0, 1.0) = 0.1;
uniform float transparency : hint_range(0.0, 1.0) = 0.8;

varying float wave_height;

void vertex() {
    float time = TIME * wave_speed;
    wave_height = sin(VERTEX.x * 2.0 + time) * wave_amplitude;
    wave_height += sin(VERTEX.z * 3.0 - time * 1.5) * wave_amplitude * 0.5;
    VERTEX.y += wave_height;
}

void fragment() {
    ALBEDO = mix(deep_color.rgb, shallow_color.rgb, wave_height + 0.5);
    ALPHA = transparency;
    ROUGHNESS = 0.1;
    METALLIC = 0.2;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_water"]
render_priority = 0
shader = SubResource("Shader_water")
shader_parameter/shallow_color = Color(0.3, 0.5, 0.7, 0.8)
shader_parameter/deep_color = Color(0.1, 0.2, 0.4, 0.95)
shader_parameter/wave_speed = 0.5
shader_parameter/wave_amplitude = 0.05
shader_parameter/transparency = 0.85

[sub_resource type="BoxShape3D" id="BoxShape3D_water"]
size = Vector3(40, 2, 40)

[sub_resource type="BoxMesh" id="BoxMesh_platform"]
size = Vector3(15, 0.5, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wood"]
albedo_color = Color(0.4, 0.25, 0.15, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_platform"]
size = Vector3(15, 0.5, 10)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_player"]
height = 2.0
radius = 0.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_player"]
height = 2.0
radius = 0.5

[node name="ParkLevel" type="Node3D"]
script = ExtResource("1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707, -0.5, 0.5, 0, 0.707, 0.707, -0.707, -0.5, 0.5, 0, 20, 0)
light_energy = 0.8
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866, 0.5, 0, -0.5, 0.866, 0, 15, 20)
fov = 60

[node name="Ground" type="StaticBody3D" parent="."]
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_ground")
surface_material_override/0 = SubResource("StandardMaterial3D_grass")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_ground")

[node name="Pond" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="WaterSurface" type="MeshInstance3D" parent="Pond"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
mesh = SubResource("PlaneMesh_water")
surface_material_override/0 = SubResource("ShaderMaterial_water")

[node name="WaterArea" type="Area3D" parent="Pond"]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pond/WaterArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_water")

[node name="ParkAreas" type="Node3D" parent="."]

[node name="NorthPlatform" type="StaticBody3D" parent="ParkAreas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -40)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="ParkAreas/NorthPlatform"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = SubResource("StandardMaterial3D_wood")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParkAreas/NorthPlatform"]
shape = SubResource("BoxShape3D_platform")

[node name="SouthPlatform" type="StaticBody3D" parent="ParkAreas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 40)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="ParkAreas/SouthPlatform"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = SubResource("StandardMaterial3D_wood")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParkAreas/SouthPlatform"]
shape = SubResource("BoxShape3D_platform")

[node name="EastBridge" type="StaticBody3D" parent="ParkAreas"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 30, 0.5, 0)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="ParkAreas/EastBridge"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = SubResource("StandardMaterial3D_wood")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParkAreas/EastBridge"]
shape = SubResource("BoxShape3D_platform")

[node name="WestBridge" type="StaticBody3D" parent="ParkAreas"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, -30, 0.5, 0)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="ParkAreas/WestBridge"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = SubResource("StandardMaterial3D_wood")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParkAreas/WestBridge"]
shape = SubResource("BoxShape3D_platform")

[node name="Trees" type="Node3D" parent="."]

[node name="Bushes" type="Node3D" parent="."]

[node name="Benches" type="Node3D" parent="."]

[node name="Bench1" type="StaticBody3D" parent="Benches"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 0, -10)
collision_layer = 1

[node name="Bench2" type="StaticBody3D" parent="Benches"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, -10)
collision_layer = 1

[node name="Bench3" type="StaticBody3D" parent="Benches"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, -10, 0, 25)
collision_layer = 1

[node name="Bench4" type="StaticBody3D" parent="Benches"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 10, 0, -25)
collision_layer = 1

[node name="ParticleEffects" type="Node3D" parent="."]

[node name="LayeredPlatforms" type="Node3D" parent="."]

[node name="JumpingPlatforms" type="Node3D" parent="LayeredPlatforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 0)

[node name="Platform1" type="StaticBody3D" parent="LayeredPlatforms/JumpingPlatforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="LayeredPlatforms/JumpingPlatforms/Platform1"]
mesh = SubResource("BoxMesh_platform")
transform = Transform3D(0.3, 0, 0, 0, 0.5, 0, 0, 0, 0.3, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LayeredPlatforms/JumpingPlatforms/Platform1"]
shape = SubResource("BoxShape3D_platform")
transform = Transform3D(0.3, 0, 0, 0, 0.5, 0, 0, 0, 0.3, 0, 0, 0)

[node name="Platform2" type="StaticBody3D" parent="LayeredPlatforms/JumpingPlatforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 2.5, 0)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="LayeredPlatforms/JumpingPlatforms/Platform2"]
mesh = SubResource("BoxMesh_platform")
transform = Transform3D(0.3, 0, 0, 0, 0.5, 0, 0, 0, 0.3, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LayeredPlatforms/JumpingPlatforms/Platform2"]
shape = SubResource("BoxShape3D_platform")
transform = Transform3D(0.3, 0, 0, 0, 0.5, 0, 0, 0, 0.3, 0, 0, 0)

[node name="Platform3" type="StaticBody3D" parent="LayeredPlatforms/JumpingPlatforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 4, 0)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="LayeredPlatforms/JumpingPlatforms/Platform3"]
mesh = SubResource("BoxMesh_platform")
transform = Transform3D(0.3, 0, 0, 0, 0.5, 0, 0, 0, 0.3, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LayeredPlatforms/JumpingPlatforms/Platform3"]
shape = SubResource("BoxShape3D_platform")
transform = Transform3D(0.3, 0, 0, 0, 0.5, 0, 0, 0, 0.3, 0, 0, 0)

[node name="Platform4" type="StaticBody3D" parent="LayeredPlatforms/JumpingPlatforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 6, 0)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="LayeredPlatforms/JumpingPlatforms/Platform4"]
mesh = SubResource("BoxMesh_platform")
transform = Transform3D(0.4, 0, 0, 0, 0.5, 0, 0, 0, 0.4, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LayeredPlatforms/JumpingPlatforms/Platform4"]
shape = SubResource("BoxShape3D_platform")
transform = Transform3D(0.4, 0, 0, 0, 0.5, 0, 0, 0, 0.4, 0, 0, 0)

[node name="SpiralTower" type="Node3D" parent="LayeredPlatforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, -20)

[node name="Base" type="StaticBody3D" parent="LayeredPlatforms/SpiralTower"]
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="LayeredPlatforms/SpiralTower/Base"]
mesh = SubResource("BoxMesh_platform")
transform = Transform3D(0.5, 0, 0, 0, 0.2, 0, 0, 0, 0.5, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LayeredPlatforms/SpiralTower/Base"]
shape = SubResource("BoxShape3D_platform")
transform = Transform3D(0.5, 0, 0, 0, 0.2, 0, 0, 0, 0.5, 0, 0, 0)

[node name="Step1" type="StaticBody3D" parent="LayeredPlatforms/SpiralTower"]
transform = Transform3D(0.866, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866, 3, 1.5, 0)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="LayeredPlatforms/SpiralTower/Step1"]
mesh = SubResource("BoxMesh_platform")
transform = Transform3D(0.3, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LayeredPlatforms/SpiralTower/Step1"]
shape = SubResource("BoxShape3D_platform")
transform = Transform3D(0.3, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)

[node name="Step2" type="StaticBody3D" parent="LayeredPlatforms/SpiralTower"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 0, 3, 3)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="LayeredPlatforms/SpiralTower/Step2"]
mesh = SubResource("BoxMesh_platform")
transform = Transform3D(0.3, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LayeredPlatforms/SpiralTower/Step2"]
shape = SubResource("BoxShape3D_platform")
transform = Transform3D(0.3, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)

[node name="Step3" type="StaticBody3D" parent="LayeredPlatforms/SpiralTower"]
transform = Transform3D(-0.866, 0, 0.5, 0, 1, 0, -0.5, 0, -0.866, -3, 4.5, 0)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="LayeredPlatforms/SpiralTower/Step3"]
mesh = SubResource("BoxMesh_platform")
transform = Transform3D(0.3, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LayeredPlatforms/SpiralTower/Step3"]
shape = SubResource("BoxShape3D_platform")
transform = Transform3D(0.3, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)

[node name="Top" type="StaticBody3D" parent="LayeredPlatforms/SpiralTower"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="LayeredPlatforms/SpiralTower/Top"]
mesh = SubResource("BoxMesh_platform")
transform = Transform3D(0.4, 0, 0, 0, 0.2, 0, 0, 0, 0.4, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LayeredPlatforms/SpiralTower/Top"]
shape = SubResource("BoxShape3D_platform")
transform = Transform3D(0.4, 0, 0, 0, 0.2, 0, 0, 0, 0.4, 0, 0, 0)

[node name="ViewingPlatform" type="Node3D" parent="LayeredPlatforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -40, 0, -40)

[node name="Platform1" type="StaticBody3D" parent="LayeredPlatforms/ViewingPlatform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
collision_layer = 1

[node name="Platform2" type="StaticBody3D" parent="LayeredPlatforms/ViewingPlatform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0)
collision_layer = 1

[node name="Stairs1" type="StaticBody3D" parent="LayeredPlatforms/ViewingPlatform"]
transform = Transform3D(0.866, -0.5, 0, 0.5, 0.866, 0, 0, 0, 1, 5, 1.5, 0)
collision_layer = 1

[node name="Stairs2" type="StaticBody3D" parent="LayeredPlatforms/ViewingPlatform"]
transform = Transform3D(0.866, -0.5, 0, 0.5, 0.866, 0, 0, 0, 1, 5, 4.5, 0)
collision_layer = 1

[node name="GazeboPlatform" type="Node3D" parent="LayeredPlatforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 0, 40)

[node name="Base" type="StaticBody3D" parent="LayeredPlatforms/GazeboPlatform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
collision_layer = 1

[node name="Roof" type="StaticBody3D" parent="LayeredPlatforms/GazeboPlatform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
collision_layer = 1

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 10)
collision_layer = 2
collision_mask = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
mesh = SubResource("CapsuleMesh_player")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_player")

[node name="NPCs" type="Node3D" parent="."]

[node name="ChatUI" type="Control" parent="."]